# transcoderr

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml
.github/workflows/: auto-release.yml  pages.yml  release.yml  tests.yml
crates/transcoderr/: Cargo.toml  build.rs
crates/transcoderr-api-types/: Cargo.toml
crates/transcoderr-mcp/: Cargo.toml
crates/transcoderr-mcp/src/: client.rs  main.rs
crates/transcoderr-mcp/src/tools/: browse.rs  flows.rs  mod.rs  notifiers.rs  plugins.rs  runs.rs  sources.rs  system.rs
crates/transcoderr-mcp/tests/: mcp_stdio_e2e.rs  smoke.rs
crates/transcoderr/migrations/: 20260425000004_phase4_settings.sql  20260426000001_api_tokens.sql  20260501000001_plugin_catalogs.sql  20260502000001_workers.sql  20260503000001_worker_path_mappings.sql  20260503000002_rename_pool_size_setting.sql
crates/transcoderr/src/: config.rs  ffmpeg.rs  ffmpeg_caps.rs  lib.rs  log_spill.rs  main.rs  metrics.rs  path_mapping.rs  public_url.rs  ready.rs  retention.rs  static_assets.rs  worker.rs
crates/transcoderr/src/api/: arr_browse.rs  auth.rs  dryrun.rs  flows.rs  jobs.rs  mod.rs  notifiers.rs  plugin_catalogs.rs  plugins.rs  runs.rs  settings.rs  sources.rs  worker_enroll.rs  worker_plugins.rs  workers.rs
crates/transcoderr/src/arr/: browse.rs  cache.rs  mod.rs  reconcile.rs
crates/transcoderr/src/bus/: mod.rs  sse.rs
crates/transcoderr/src/db/: api_tokens.rs  checkpoints.rs  flows.rs  jobs.rs  mod.rs  notifiers.rs  plugin_catalogs.rs  plugins.rs  run_events.rs  settings.rs  sources.rs  workers.rs
crates/transcoderr/src/discovery/: mod.rs
crates/transcoderr/src/dispatch/: mod.rs  remote.rs
crates/transcoderr/src/flow/: context.rs  engine.rs  expr.rs  mod.rs  model.rs  parser.rs  plan.rs  staging.rs  validate.rs
crates/transcoderr/src/http/: auth_extract.rs  dedup.rs  mod.rs  webhook_generic.rs  webhook_lidarr.rs  webhook_radarr.rs  webhook_sonarr.rs
crates/transcoderr/src/hw/: devices.rs  mod.rs  probe.rs  semaphores.rs
crates/transcoderr/src/notifiers/: discord.rs  jellyfin.rs  mod.rs  ntfy.rs  telegram.rs  webhook.rs
crates/transcoderr/src/plugins/: catalog.rs  deps.rs  installer.rs  manifest.rs  mod.rs  runtime.rs  subprocess.rs  uninstaller.rs
crates/transcoderr/src/steps/: audio_ensure.rs  builtin.rs  copy_step.rs  delete_step.rs  extract_subs.rs  iso_extract.rs  mod.rs  move_step.rs  notify.rs  output.rs  plan_execute.rs  plan_steps.rs  probe.rs  registry.rs  remux.rs  schemas.rs  shell.rs  strip_tracks.rs  transcode.rs  verify_playable.rs  webhook.rs
crates/transcoderr/src/worker/: config.rs  connection.rs  connections.rs  daemon.rs  discovery.rs  enroll.rs  executor.rs  local.rs  mod.rs  plugin_sync.rs  pool.rs  protocol.rs
crates/transcoderr/tests/: api_auth.rs  api_flows.rs  api_flows_validate.rs  api_misc.rs  api_plugin_catalogs.rs  api_redaction.rs  api_step_kinds.rs  arr_browse.rs  auto_discovery.rs  auto_provision.rs  cancel_remote.rs  chain_steps.rs  concurrent_claim.rs  crash_recovery.rs  db_roundtrip.rs  db_sources.rs  delete_source.rs  flow_conditional.rs  flow_engine.rs  flow_on_failure.rs  flow_parser.rs  flow_parser_extended.rs  flow_timeout.rs  hw_semaphores.rs  local_worker.rs  log_spill.rs  metrics.rs  notify_discord.rs  notify_telegram.rs  path_mapping.rs  plugin_discovery.rs  plugin_install_e2e.rs  plugin_push.rs  plugin_remote_dispatch.rs  plugin_size_report.rs  plugin_subprocess.rs  readyz.rs  remote_dispatch.rs  retention.rs  sse.rs  (+15 more)
crates/transcoderr/tests/common/: mod.rs
crates/transcoderr/tests/fixtures/: 7z_listing_bdmv.txt
crates/transcoderr/tests/fixtures/plugins/hello/: schema.json
docker/: Dockerfile.cpu  Dockerfile.full  Dockerfile.intel  Dockerfile.nvidia  docker-compose.example.yml  entrypoint.sh
docs/: deploy.md  flow-authoring.md  mcp.md  relay.md
docs/flows/: hevc-normalize.yaml  transcoderr-relay.yaml  webhook.yaml
migrations/: 20260425000001_initial.sql  20260425000002_phase2_sources.sql  20260425000003_phase3_hw.sql
scripts/: capture.mjs  package-lock.json  package.json  placeholders.mjs  redact.config.mjs  redact.mjs  shots.config.mjs
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
src/: cancellation.rs  config.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  ready.rs  retention.rs  static_assets.rs  worker.rs
src/api/: flows.rs  jobs.rs  mod.rs  plugins.rs  runs.rs  settings.rs  sources.rs
src/bus/: sse.rs
src/db/: flows.rs  jobs.rs  mod.rs  notifiers.rs  run_events.rs
src/flow/: context.rs  engine.rs  expr.rs  mod.rs  model.rs  parser.rs  staging.rs
src/http/: dedup.rs  mod.rs  webhook_generic.rs  webhook_lidarr.rs  webhook_radarr.rs  webhook_sonarr.rs
src/notifiers/: discord.rs  mod.rs  telegram.rs
src/plugins/: manifest.rs  mod.rs
src/steps/: audio_ensure.rs  builtin.rs  copy_step.rs  delete_step.rs  extract_subs.rs  mod.rs  move_step.rs  notify.rs  output.rs  plan_steps.rs  probe.rs  registry.rs  remux.rs  strip_tracks.rs  transcode.rs  verify_playable.rs
tests/: api_flows.rs  chain_steps.rs  crash_recovery.rs  db_roundtrip.rs  flow_conditional.rs  flow_engine.rs  flow_on_failure.rs  flow_parser.rs  flow_parser_extended.rs  flow_timeout.rs  hw_probe.rs  metrics.rs  notify_telegram.rs  retention.rs  sse.rs  step_audio_ensure.rs  step_filesys.rs  step_output.rs  step_probe.rs  step_remux.rs  step_transcode.rs  step_transcode_hw.rs  webhook_dedup.rs  webhook_generic.rs  webhook_sonarr.rs  webhook_to_complete.rs
tests/common/: mod.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types-arr.ts  types.ts
(+119 files in other folders)
