[workspace]
resolver = "2"
members = [
  "crates/transcoderr",
  "crates/transcoderr-api-types",
  "crates/transcoderr-mcp",
]

[workspace.package]
version = "0.7.1"
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
